Refactored some components, a couple other cosmetic changes

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -16,7 +16,7 @@ body {
 .order {
   font-style: italic;
   font-size: 18px;
-  color: #ccc;
+  color: #bbb;
   cursor: default;
   text-align: center;
 }
