--- a/styles/home.scss
+++ b/styles/home.scss
@@ -32,11 +32,21 @@ body {
   justify-content: center;
 }
 
+.hm-wrapper {
+  display: grid;
+  // Defines each row's height
+  grid-template-rows: 80px 80px;
+  grid-template-columns: 80px 80px 80px 80px 80px;
+  grid-gap: 5px;
+  color: #444;
+  padding: inherit;
+  justify-content: center;
+}
+
 .box {
   background-color: #444;
   border-radius: 5px;
   padding: 5px;
-  font-size: 150%;
   cursor: pointer;
 }
 
@@ -55,7 +65,19 @@ body {
   transition: all .3s ease;
 }
 
+.hm-box {
+  background-color: #444;
+  border-radius: 5px;
+  padding: 3px;
+  font-size: 150%;
+  cursor: pointer;
+}
+
 .album-cover {
+  width: 100%;
+}
+
+.hm-album-cover {
   width: 100%;
 }
 
